# wish-protocol-V2.0

./: Cargo.toml  README.md  gen_certs.sh  install.sh  mock_openclaw.sh
reference/: README_FOR_AGENTS.md  Wish Protocol Specification v2.0.md
src/: client.rs  crypto.rs  daemon.rs  keyring.rs  main.rs  protocol.rs
