[package]
name = "wish-protocol"
version = "0.1.0"
edition = "2021"
description = "Wish Protocol v2.0 - Secure P2P Agent Communication"

[[bin]]
name = "wishp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
rustls = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
toml = "0.8"
anyhow = "1"
base64 = "0.22"
rand = "0.8"
futures = "0.3"
rustls-pemfile = "2"
webpki-roots = "0.26"
shellexpand = "3"
dirs = "5.0"
hex = "0.4"
rcgen = "0.13"
chrono = "0.4"
